# metrics_monitor_system

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DEBIAN_PACKAGE.md  README.md  build_deb.sh  config.json.example  setup_dependencies.sh  test_api.sh  test_firmware_update.sh  test_post_get.sh  test_post_instances.sh
debian/: changelog  control  debhelper-build-stamp  files  install  metrics-monitor-system.install  metrics-monitor-system.postrm.debhelper  metrics-monitor-system.service  metrics-monitor-system.substvars  not-installed  postinst  postrm  rules
debian/.debhelper/metrics-monitor-system/: dbgsym-build-ids
debian/.debhelper/metrics-monitor-system/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/metrics-monitor-system/dbgsym-root/usr/lib/debug/.dwz/aarch64-linux-gnu/: metrics-monitor-system.debug
debian/.debhelper/metrics-monitor-system/dbgsym-root/usr/share/doc/: metrics-monitor-system-dbgsym
debian/metrics-monitor-system/DEBIAN/: control  md5sums  postinst  postrm  prerm
debian/metrics-monitor-system/opt/cvedix/monitor/: metrics_monitor_system
debian/tmp/usr/share/metrics_monitor_system/: config.json.example
include/: config.h  device_config.h  json_utils.h  system_info.h  system_status.h
obj-aarch64-linux-gnu/: device_config.example.json  install_manifest.txt
src/: config.cpp  device_config.cpp  json_utils.cpp  main.cpp  system_info.cpp  system_status.cpp
